# MMVAE_Hub

./: .gitignore  .travis.yml  README.md  environment.yml  main_ap_celeba.py  main_svhnmnist.py  plot_lhood_coherence.py  requirements.txt  setup.cfg  tox.ini
celeba/: experiment.py
configs/: bartholin_config.json  leomed_config.json  mmvae_db.json  toy_config.json
configs/celeba/: bartholin_config.json  leomed_config.json
configs/mimic/: bartholin_config.json  leomed_config.json  local_config.json
configs/mnistsvhntext/: bartholin_config.json  leomed_config.json  local_config.json
configs/polymnist/: bartholin_config.json  leomed_config.json  local_config.json
mmvae_hub/: __init__.py  clean_experiment_checkpoints.py  run_epochs.py
mmvae_hub/VQVAE/: VQMimicIMG.py  VQMimicText.py  VQMoAM.py  VQMoPoE.py  VQTBLogger.py  VQTrainer.py  VQVAE.py  VqVaeDataclasses.py  grid_search.py  leomed_run.py  main_mimic.py  toy_freia.py  vq_mimic_experiment.py
mmvae_hub/base/: BaseCallback.py  BaseExperiment.py  BaseFlags.py  BaseMMVae.py  BaseTrainer.py  __init__.py
mmvae_hub/celeba/: CelebADataset.py  CelebaLogger.py  CelebaTrainer.py  experiment.py  flags.py  grid_search.py  leomed_run.py  main_celeba.py  metrics.py
mmvae_hub/celeba_/: SVHNMNISTDataset.py  experiment.py  grid_search.py
mmvae_hub/evaluation/: losses.py  utils.py
mmvae_hub/experiment_vis/: experiment_vis.ipynb  experiments_exploration.ipynb  run_notebook.py  run_notebook.sh  utils.py
mmvae_hub/hyperopt/: HyperoptTrainer.py  hyperopt_metrics.py  leomed_launcher.sh
mmvae_hub/leomed_utils/: boilerplate.py  clean_experiment_zips.py  launch_jobs.py  prepare_leomed_data.sh  upload_experimentzip.py
mmvae_hub/logger/: logger.py
mmvae_hub/mimic/: MimicDataset.py  MimicTrainer.py  experiment.py  find_dataset_stats.py  flags.py  grid_search.py  leomed_run.py  main_mimic.py  metrics.py  utils.py
mmvae_hub/mmnist/: MMNISTDataset.py  MmnistTrainer.py  PolyMNISTMod.py  __init__.py  experiment.py  flags.py  main_mmnist.py  metrics.py  utils.py
mmvae_hub/mnistsvhntext/: MNISTmod.py  SVHNMNISTDataset.py  SVHNmod.py  flags.py  (+6 more)
mmvae_mst/: __init__.py  experiment.py  flags.py  main_svhnmnist.py  run_epochs.py
tests/: static_results.json  test_basics.py  test_functions.py  test_static.py  test_training.py  try_db.py  utils.py
(+202 files in other folders)
