[metadata]
name = MMVAE_Hub
version = 0.0.22-dev
description = Codebase for training multi modal VAEs on multiple datasets.
url = https://github.com/Jimmy2027/MMVAE_Hub
keywords =
    MMVAE
    data analysis
    deep learning

provides = mmvae_hub

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.9
install_requires =
    torch
    Pillow
    torchvision
    sklearn
    matplotlib
    pandas
    tqdm
    imageio
    tensorboard
    wget
    tensorflow
    nbconvert
    pymongo
    configparser
    typer
    optuna
    nltk
    FrEIA @ git+https://github.com/VLL-HD/FrEIA.git
    modun @ git+https://github.com/Jimmy2027/MODUN.git
    norby @ https://github.com/Jimmy2027/NORBY


packages = find:


[options.extras_require]
test =
    pytest

